2006-01-09  Brian Cameron  <brian.cameron@sun.com>

	* config/locale.alias:  Correct spelling of "Esperanto".
	  Fixes bug #326350.  Patch provided by Saleem Abdulrasool
	  <compnerd@gentoo.org>.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Added "Performance" section to discuss 
	  the --with-prefetch option.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* config/Makefile.am:  Make the Makefile.am file a bit smarter.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Make error message more clear when session file
	  is invalid.  Now it says what session file had the problem.
	  This fixes bug #322699.
	* gui/gdmconfig.c: Now the gdm_config_get_xserver_details
	  function is more robust, and handles NULL return values 
	  better and supports PRIORITY.
	* gui/gdmsetup.c: Now that gdmconfig reads in the priority value,
	  gdmsetup will write it back out if that server is modified.
	  However, gdmsetup still doesn't allow you to modify the
	  priority value.  Probably should add a spinbutton to the
	  dialog.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, gui/gdmsetup.c, vicious-extensions/Makefile.am: No
	  longer require libgnome or libgnomeui at all in GDM2.  Patch
	  provided by Jani Monoses.

2006-01-04  Brian Cameron  <brian.cameron@sun.com>

	* configure.ac, docs/C/gdm.xml, config/gdm.conf.in: Fix 
	  Prefetch command so that there is a needed "@" before the
	  argument to gdmprefetch.  Padraid O'Briain pointed out this
	  oversight.  Made docs a bit more clear to highlight the usage
	  of this "@" character.
	* gui/greeter.c, gui/greeter/greeter_item.c,
	  gui/greeter/greeter_system.c: Now call gdm_working_command_exists
	  for halt/reboot/suspend/configurator once at startup and cache 
	  the values in globals so we don't have to keep calling this 
	  function over and over while gdmgreeter runs.  Padraig noticed
	  that this function causes a large number of calls to stat which