@@ -790,6 +790,7 @@ Themed</property>
 				  <property name="xpad">0</property>
 				  <property name="ypad">0</property>
 				  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				  <property name="mnemonic_widget">gg_mode_combobox</property>
 				  <property name="width_chars">-1</property>
 				  <property name="single_line_mode">False</property>
 				  <property name="angle">0</property>
@@ -847,7 +848,7 @@ Random from selected
 				      <property name="headers_visible">False</property>
 				      <property name="rules_hint">False</property>
 				      <property name="reorderable">False</property>
-				      <property name="enable_search">False</property>
+				      <property name="enable_search">True</property>
 				      <property name="fixed_height_mode">False</property>
 				      <property name="hover_selection">False</property>
 				      <property name="hover_expand">False</property>
@@ -1227,7 +1228,7 @@ Random from selected
 				      <child>
 					<widget class="GtkLabel" id="label207">
 					  <property name="visible">True</property>
-					  <property name="label" translatable="yes">Background co_lor:</property>
+					  <property name="label" translatable="yes">_Background color:</property>
 					  <property name="use_underline">True</property>
 					  <property name="use_markup">False</property>
 					  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1571,6 +1572,7 @@ Random from selected
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
+			  <property name="mnemonic_widget">remote_greeter</property>
 			  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
 			  <property name="width_chars">-1</property>
 			  <property name="single_line_mode">False</property>
@@ -2088,6 +2090,7 @@ Same as Local</property>
 				      <property name="xpad">0</property>
 				      <property name="ypad">0</property>
 				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+				      <property name="mnemonic_widget">gg_mode_combobox_remote</property>
 				      <property name="width_chars">-1</property>
 				      <property name="single_line_mode">False</property>
 				      <property name="angle">0</property>
@@ -2145,7 +2148,7 @@ Random from selected
 					  <property name="headers_visible">False</property>
 					  <property name="rules_hint">False</property>
 					  <property name="reorderable">False</property>
-					  <property name="enable_search">False</property>
+					  <property name="enable_search">True</property>
 					  <property name="fixed_height_mode">False</property>
 					  <property name="hover_selection">False</property>
 					  <property name="hover_expand">False</property>
@@ -2525,7 +2528,7 @@ Random from selected
 					  <child>
 					    <widget class="GtkLabel" id="label215">
 					      <property name="visible">True</property>
-					      <property name="label" translatable="yes">Background co_lor:</property>
+					      <property name="label" translatable="yes">_Background color:</property>
 					      <property name="use_underline">True</property>
 					      <property name="use_markup">False</property>
 					      <property name="justify">GTK_JUSTIFY_LEFT</property>
