@@ -1,3 +1,12 @@
+2006-01-09  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gui/gdmsetup.c: (theme_list_equal_func): New function.
+	(setup_local_themed_settings), (setup_remote_themed_settings):
+	Group the preview and markup into one column.  Sort list
+	and setup a GTK+ TreeView search function.
+	* gui/gdmsetup.glade:  Fix a few broken mnemonics.  Enable 
+	GTK+ TreeView searches. 
+
 2006-01-09  Brian Cameron  <brian.cameron@sun.com>
 
 	* config/locale.alias:  Correct spelling of "Esperanto".
